--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,16 +1,15 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: Rubén Roinich # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: WEB UOCRA
+    url: https://www.uocra.net
+  - name: SOM
+    url: https://som.uocra.net
+  - name: Correo
+    url: https://webmail.uocra.org
+  
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
