--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,6 +13,9 @@ sites:
     url: https://www.google.com
   
 
+assignees:
+- roinichruben
+
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
